fix text scaling and legibility

--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,20 @@
     margin: 0;
 }
 
+body {
+    background-color: grey;
+}
+
 :root {
     font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
-    color: white;
+    color: rgb(250, 250, 250);
     position: absolute;
     width: 100%;
     padding-left: 10vw;
     padding-right: 10vw;
-    font-size: 1em;
 }
 
 canvas {
@@ -56,9 +59,14 @@ nav {
 
 .nav-links a {
     color: white;
-    padding: 2em;
+    padding: 1em;
     text-decoration: none;
 }
+
+.nav-links a:hover {
+    color: rgb(255, 164, 255);
+}
+
 .logo {
     display: flex;
     height: 42px;
@@ -67,6 +75,7 @@ nav {
 .burger {
     display: none;
     cursor: pointer;
+    background-color: black;
 }
 
 .burger div {
@@ -93,7 +102,7 @@ nav {
         align-items: center;
         justify-content: space-around;
         transform: scale(0, 1);
-        transition: 0.5s ease-in;
+        transition: 0.2s ease-in;
     }
     .nav-links li {
         opacity: 0;
@@ -123,7 +132,9 @@ nav {
 /* TEXT FORMATTING */
 
 #intro,
-#about {
+#about,
+#projects,
+#experience {
     min-height: 90vh;
     display: flex;
     flex-direction: column;
@@ -131,25 +142,26 @@ nav {
 }
 
 #intro *,
-#about * {
-    padding-top: 2vh;
-    padding-bottom: 2vh;
+#about *,
+#projects * {
+    padding: 2vh;
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 h1 {
-    font-size: 3em;
+    font-size: clamp(3rem, 5vw, 12rem);
     font-weight: bold;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: clamp(2rem, 3vw, 8rem);
 }
 
 h5 {
-    font-size: 1.1em;
+    font-size: clamp(1rem, 1vw, 4rem);
     font-family: monospace;
 }
 
 p {
-    font-size: 1em;
+    font-size: clamp(1.1rem, 1vw, 4rem);
 }
